--- a/OpenSilver.Samples.TelerikUI/OpenSilver.Samples.TelerikUI.Simulator/OpenSilver.Samples.TelerikUI.Simulator.csproj
+++ b/OpenSilver.Samples.TelerikUI/OpenSilver.Samples.TelerikUI.Simulator/OpenSilver.Samples.TelerikUI.Simulator.csproj
@@ -7,7 +7,7 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="OpenSilver.Simulator" Version="1.0.0-beta.1.22" />
+		<PackageReference Include="OpenSilver.Simulator" Version="1.0.0" />
 	</ItemGroup>
 
 	<ItemGroup>
