--- a/OpenSilver.Samples.TelerikUI/OpenSilver.Samples.TelerikUI/OpenSilver.Samples.TelerikUI.csproj
+++ b/OpenSilver.Samples.TelerikUI/OpenSilver.Samples.TelerikUI/OpenSilver.Samples.TelerikUI.csproj
@@ -230,8 +230,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="OpenSilver" Version="1.0.0-beta.1.22" />
-    <PackageReference Include="OpenSilver.Compatibility.TelerikUI" Version="1.0.0-beta.1.22.1" />
+    <PackageReference Include="OpenSilver" Version="1.0.0" />
+    <PackageReference Include="OpenSilver.Compatibility.TelerikUI" Version="1.0.0.1" />
   </ItemGroup>
 
 </Project>
